--- a/css/index.css
+++ b/css/index.css
@@ -17,7 +17,7 @@
 
   #app {
     margin: 0 auto;
-    background: url("../assets/img/home_agency.jpg") no-repeat;
+    /*background: url("../assets/img/home_agency.jpg") no-repeat;*/
     background-size: cover;
     height: 3100px;
   }
@@ -112,4 +112,74 @@
     padding-top: 180px;
     padding-left: 480px;
     position: absolute;
+  }
+
+  .content--space{
+    height: 240px;
+    /*background-color: red;*/
+    opacity: 50%;
+  }
+
+  .vertical-line{
+    border-left: 2px solid #000;
+    display: inline-block;
+    height: 140px;
+    margin: 0 360px;
+  }
+
+  .vertical-line2{
+    border-left: 2px solid #000;
+    display: inline-block;
+    height: 140px;
+    margin: 0 1478px;
+  }
+  .horizontal-line{
+    border-top: 2px solid #000;
+    display: inline-block;
+    width: 140px;
+    margin-top:305px;
+    margin-left: 50px;
+  }
+  .section-1{
+    /*background-color: blue;*/
+    opacity: 50%;
+    height: 510px;
+    margin-left: 300px;
+    width: 50%;
+
+  }
+  .about{
+    position: absolute;
+    margin-left: 55px;
+    margin-top: 70px;
+    font-size: 22px;
+    color: grey;
+    font-family: 'Arial';
+    letter-spacing: 10px;
+    font-weight: 600;
+
+  }
+
+  .txt-01{
+    position: absolute;
+    margin-left: 55px;
+    margin-top: 115px;
+    font-size: 70px;
+    color: black;
+    font-family: 'Arial';
+    font-weight: 600;
+  }
+
+  .paragraph{
+    position: absolute;
+    margin-left: 220px;
+    margin-top: 300px;
+    width: 400px;
+    line-height: 28px;
+    font-size: 14px;
+  }
+
+  .image--section-1{
+    width: 340px;
+    margin-left: 700px;
   }
