--- a/css/index.css
+++ b/css/index.css
@@ -296,3 +296,29 @@
     background-size: cover;
     background-position: center;
 }
+
+footer{
+    background-color: black;
+    height: 150px;
+    margin-top: 100px;
+
+}
+
+.reseaux{
+    text-align:center;
+}
+
+.reseaux-sociaux--image{
+    width: 25px;
+    height: 25px;
+    margin-right: 15px;
+    margin-top: 25px;
+}
+.copyright{
+    color: white;
+    text-align:center;
+    font-size: 18px;
+    font-family: 'Arial';
+    font-weight: 600;
+    margin-top: 25px;
+}
